--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,108 @@
 name = Mojolicious-Plugin-BootstrapHelpers
-[@Milla]
+[NameFromDirectory]
+
+[Git::GatherDir]
+exclude_filename = Build.PL
+exclude_filename = META.json
+exclude_filename = LICENSE
+exclude_filename = README.md
+
+[CopyFilesFromBuild]
+copy = META.json
+copy = LICENSE
+copy = Build.PL
+
+[VersionFromModule]
+
+[LicenseFromModule]
+override_author = 1
+
+[ReversionOnRelease]
+prompt = 1
+
+[NextRelease]
+format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
+
+[Git::Check]
+allow_dirty = dist.ini
+allow_dirty = Changes
+allow_dirty = META.json
+allow_dirty = README.md
+allow_dirty = Build.PL
+
+[GithubMeta]
+issues = 1
+
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.md
+location = root
+
+[MetaNoIndex]
+directory = t
+directory = xt
+directory = inc
+directory = share
+directory = eg
+directory = examples
+
+[Prereqs::FromCPANfile]
+
+[ModuleBuildTiny]
+
+[MetaJSON]
+
+[Milla::MetaGeneratedBy]
+
+[ContributorsFromGit]
+
+[Test::EOL]
+[Test::EOF]
 [Test::CreateFromMojoTemplates]
+[PodSyntaxTests]
+
+[MetaYAML]
+
+[License]
+
+[ReadmeFromPod]
+
+[ExtraTests]
+
+[ExecDir]
+dir = script
+
+[ShareDir]
+
+[Manifest]
+
+[ManifestSkip]
+
+[CheckChangesHasContent]
+
+[TestRelease]
+
+[ConfirmRelease]
+
+[UploadToCPAN]
+
+[CopyFilesFromRelease]
+match = \.pm$
+
+[Git::Commit]
+allow_dirty = dist.ini
+allow_dirty = Changes
+allow_dirty = META.json
+allow_dirty = README.md
+allow_dirty = Build.PL
+allow_dirty_match = \.pm$
+commit_msg = %v
+
+[Git::Tag]
+tag_message = 
+tag_format = %v
+
+[Git::Push]
+remotes_must_exist = 0
+
+
