Added Travis. Changed to PkgVersion and NV::Semantic

--- a/dist.ini
+++ b/dist.ini
@@ -12,7 +12,7 @@ copy = META.json
 copy = LICENSE
 copy = Build.PL
 
-[VersionFromModule]
+;  [VersionFromModule]
 
 [LicenseFromModule]
 override_author = 1
@@ -20,8 +20,23 @@ override_author = 1
 [ReversionOnRelease]
 prompt = 1
 
+[PkgVersion]
+die_on_existing_version = 1
+die_on_line_insertion = 1
+
 [NextRelease]
 format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
+
+[PreviousVersion::Changelog]
+[NextVersion::Semantic]
+major =
+minor = New Features, API Changes, Enhancements
+revision = Revision, Bug Fixes, Documentation, Meta
+format = %d.%03d.%03d
+numify_version = 0
+
+;[ChangeStats::Git]
+;group = Stats
 
 [Git::Check]
 allow_dirty = dist.ini
@@ -97,6 +112,9 @@ allow_dirty = README.md
 allow_dirty = Build.PL
 allow_dirty_match = \.pm$
 commit_msg = %v
+
+[TravisYML]
+perl_version = 5.20
 
 [Git::Tag]
 tag_message = 
