Adapt for travis. Add build status to pod.

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,8 @@
 name = Mojolicious-Plugin-BootstrapHelpers
+author = Erik Carlsson <csson@cpan.org>
+license = Perl_5
+copyright_holder = Erik Carlsson
+
 [NameFromDirectory]
 
 [Git::GatherDir]
