Try to not make DZ plugins mess with each other.

--- a/dist.ini
+++ b/dist.ini
@@ -105,8 +105,8 @@ dir = script
 
 [UploadToCPAN]
 
-[CopyFilesFromRelease]
-match = \.pm$
+;[CopyFilesFromRelease]
+;match = \.pm$
 
 [Git::Commit]
 allow_dirty = dist.ini
