--- a/dist.ini
+++ b/dist.ini
@@ -3,13 +3,13 @@ author = Erik Carlsson <csson@cpan.org>
 license = Perl_5
 copyright_holder = Erik Carlsson
 
-[NameFromDirectory]
-
 [Git::GatherDir]
 exclude_filename = Build.PL
 exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
+exclude_match = .*\.mojo
+exclude_match = template\.*
 
 [CopyFilesFromBuild]
 copy = META.json
@@ -75,6 +75,7 @@ directory = examples
 
 [ContributorsFromGit]
 
+[InsertExample::FromMojoTemplates]
 [Test::EOL]
 [Test::EOF]
 [Test::CreateFromMojoTemplates]
