Shorter version numbers

--- a/dist.ini
+++ b/dist.ini
@@ -36,7 +36,7 @@ format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
 major =
 minor = New Features, API Changes, Enhancements
 revision = Revision, Bug Fixes, Documentation, Meta
-format = %d.%03d.%03d
+format = %d.%03d%1d
 numify_version = 0
 
 ;[ChangeStats::Git]
