Use DZP::PkgVersion::Block

--- a/dist.ini
+++ b/dist.ini
@@ -24,7 +24,7 @@ override_author = 1
 [ReversionOnRelease]
 prompt = 1
 
-[PkgVersion]
+[PkgVersion::Block]
 die_on_existing_version = 1
 die_on_line_insertion = 1
 
