--- a/dist.ini
+++ b/dist.ini
@@ -1,61 +1,61 @@
+; This file was auto-generated from iller.yaml on 2015-11-23 20:39:47 UTC.
+
 name = Mojolicious-Plugin-BootstrapHelpers
-author = Erik Carlsson <csson@cpan.org>
+author = Erik Carlsson <info@code301.com>
 license = Perl_5
 copyright_holder = Erik Carlsson
+copyright_year = 2015
 
 [Git::GatherDir]
-exclude_filename = Build.PL
 exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
-exclude_match = .*\.mojo
-exclude_match = template\.*
+exclude_filename = Makefile.PL
 
 [CopyFilesFromBuild]
 copy = META.json
 copy = LICENSE
-copy = Build.PL
-
-;  [VersionFromModule]
-
-[LicenseFromModule]
-override_author = 1
+copy = Makefile.PL
 
 [ReversionOnRelease]
 prompt = 1
 
-[PkgVersion::Block]
-die_on_existing_version = 1
-die_on_line_insertion = 1
+[OurPkgVersion]
+
+[PodnameFromClassname]
 
 [NextRelease]
 format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
 
 [PreviousVersion::Changelog]
-[NextVersion::Semantic]
-major =
-minor = New Features, API Changes, Enhancements
-revision = Revision, Bug Fixes, Documentation, Meta
-format = %d.%03d%1d
-numify_version = 0
 
-;[ChangeStats::Git]
-;group = Stats
+[NextVersion::Semantic]
+format = %d.%02d%02d
+major =
+minor = API Changes, New Features, Enhancements
+numify_version = 0
+revision = Requirements, Testing, Revision, Bug Fixes, Documentation, Meta
+
+[PodWeaver]
 
 [Git::Check]
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = META.json
 allow_dirty = README.md
-allow_dirty = Build.PL
+allow_dirty = README
+allow_dirty = Makefile.PL
 
 [GithubMeta]
+homepage = https://metacpan.org/release/Mojolicious-Plugin-BootstrapHelpers
 issues = 1
 
+[Readme]
+
 [ReadmeAnyFromPod]
-type = markdown
 filename = README.md
 location = root
+type = markdown
 
 [MetaNoIndex]
 directory = t
@@ -65,34 +65,35 @@ directory = share
 directory = eg
 directory = examples
 
-[Prereqs::FromCPANfile]
+[Prereqs::Plugins]
 
-[ModuleBuildTiny]
+[MakeMaker]
 
 [MetaJSON]
 
-[Milla::MetaGeneratedBy]
+[MetaProvides::Class]
 
-[ContributorsFromGit]
+[MetaProvides::Package]
 
-[InsertExample::FromMojoTemplates]
-[Test::EOL]
-[Test::EOF]
-[Test::CreateFromMojoTemplates]
+[DistIller::MetaGeneratedBy]
+
+[Git::Contributors]
+
+[Test::ReportPrereqs]
+
 [PodSyntaxTests]
 
 [MetaYAML]
 
 [License]
 
-[ReadmeFromPod]
+[CheckExtraTests]
 
-[ExtraTests]
-
-[ExecDir]
-dir = script
+[RunExtraTests]
 
 [ShareDir]
+
+[ExecDir]
 
 [Manifest]
 
@@ -106,26 +107,87 @@ dir = script
 
 [UploadToCPAN]
 
-;[CopyFilesFromRelease]
-;match = \.pm$
-
-[Git::Commit]
-allow_dirty = dist.ini
-allow_dirty = Changes
-allow_dirty = META.json
-allow_dirty = README.md
-allow_dirty = Build.PL
-allow_dirty_match = \.pm$
-commit_msg = %v
-
 [TravisYML]
 perl_version = 5.20
 
 [Git::Tag]
-tag_message = 
 tag_format = %v
+tag_message =
 
 [Git::Push]
-remotes_must_exist = 0
+remotes_must_exist = 1
 
+[Run::AfterBuild]
+run = cp %d/examples/*.html examples
 
+[Stenciller::HtmlExamples]
+output_also_as_html = 1
+output_directory = examples
+separator = <hr />
+source_directory = examples/source
+template_file = examples/source/template.html
+
+[Stenciller::MojoliciousTests]
+output_directory = t
+source_directory = examples/source
+template_file = examples/source/template.test
+
+[Prereqs / DevelopRequires]
+Pod::Elemental::Transformer::List = 0
+Pod::Elemental::Transformer::Stenciller = 0
+Pod::Weaver::Plugin::SingleEncoding = 0
+Pod::Weaver::Plugin::Transformer = 0
+Pod::Weaver::PluginBundle::CorePrep = 0
+Pod::Weaver::Section::Authors = 0
+Pod::Weaver::Section::Badges = 0
+Pod::Weaver::Section::Collect = 0
+Pod::Weaver::Section::Generic = 0
+Pod::Weaver::Section::Homepage::DefaultCPAN = 0
+Pod::Weaver::Section::Leftovers = 0
+Pod::Weaver::Section::Legal = 0
+Pod::Weaver::Section::Name = 0
+Pod::Weaver::Section::Region = 0
+Pod::Weaver::Section::Source::DefaultGitHub = 0
+Pod::Weaver::Section::Version = 0
+Stenciller = 0.1301
+Test::Warnings = 0
+
+[Prereqs / RuntimeRequires]
+List::MoreUtils = 0
+Mojolicious = 5.0
+Scalar::Util = 1.29
+String::Random = 0
+String::Trim = 0.004
+experimental = 0.008
+perl = 5.020000
+
+[Prereqs / TestRequires]
+Test::Mojo::Trim = 0.03
+Test::More = 0.96
+
+; authordep Stenciller
+; authordep Mojolicious
+; authordep Scalar::Util
+; authordep String::Trim
+; authordep String::Random
+; authordep experimental
+; authordep List::MoreUtils
+; authordep Test::Mojo::Trim
+; authordep Test::Warnings
+; authordep Test::More
+; authordep Pod::Weaver::PluginBundle::CorePrep
+; authordep Pod::Weaver::Plugin::SingleEncoding
+; authordep Pod::Weaver::Section::Name
+; authordep Pod::Weaver::Section::Badges
+; authordep Pod::Weaver::Section::Version
+; authordep Pod::Weaver::Section::Region
+; authordep Pod::Weaver::Section::Generic
+; authordep Pod::Weaver::Section::Collect
+; authordep Pod::Weaver::Section::Leftovers
+; authordep Pod::Weaver::Section::Source::DefaultGitHub
+; authordep Pod::Weaver::Section::Homepage::DefaultCPAN
+; authordep Pod::Weaver::Section::Authors
+; authordep Pod::Weaver::Section::Legal
+; authordep Pod::Elemental::Transformer::List
+; authordep Pod::Weaver::Plugin::Transformer
+; authordep Pod::Elemental::Transformer::Stenciller
