Added links to example files on github

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml on 2015-11-23 20:39:47 UTC.
+; This file was auto-generated from iller.yaml on 2015-11-23 21:49:45 UTC.
 
 name = Mojolicious-Plugin-BootstrapHelpers
 author = Erik Carlsson <info@code301.com>
@@ -11,6 +11,7 @@ exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
 exclude_filename = Makefile.PL
+exclude_match = examples/.*\.html
 
 [CopyFilesFromBuild]
 copy = META.json
