Replaced [Legal] with [Legal::Supplemented] in weaver.ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml on 2015-11-23 21:49:45 UTC.
+; This file was auto-generated from iller.yaml on 2015-11-24 16:50:01 UTC.
 
 name = Mojolicious-Plugin-BootstrapHelpers
 author = Erik Carlsson <info@code301.com>
@@ -145,7 +145,7 @@ Pod::Weaver::Section::Collect = 0
 Pod::Weaver::Section::Generic = 0
 Pod::Weaver::Section::Homepage::DefaultCPAN = 0
 Pod::Weaver::Section::Leftovers = 0
-Pod::Weaver::Section::Legal = 0
+Pod::Weaver::Section::Legal::Supplemented = 0
 Pod::Weaver::Section::Name = 0
 Pod::Weaver::Section::Region = 0
 Pod::Weaver::Section::Source::DefaultGitHub = 0
@@ -188,7 +188,7 @@ Test::More = 0.96
 ; authordep Pod::Weaver::Section::Source::DefaultGitHub
 ; authordep Pod::Weaver::Section::Homepage::DefaultCPAN
 ; authordep Pod::Weaver::Section::Authors
-; authordep Pod::Weaver::Section::Legal
+; authordep Pod::Weaver::Section::Legal::Supplemented
 ; authordep Pod::Elemental::Transformer::List
 ; authordep Pod::Weaver::Plugin::Transformer
 ; authordep Pod::Elemental::Transformer::Stenciller
