--- a/weaver.ini
+++ b/weaver.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml on 2015-11-23 20:24:06 UTC.
+; This file was auto-generated from iller.yaml on 2015-11-24 17:04:48 UTC.
 
 [@CorePrep]
 
@@ -43,7 +43,11 @@ text = L<%s>
 
 [Authors]
 
-[Legal]
+[Legal::Supplemented]
+header = WHat
+text_after = Bootstrap itself is (c) Twitter. See L<their license information|http://getbootstrap.com/getting-started/#license-faqs>.
+text_after =
+text_after = L<Mojolicious::Plugin::BootstrapHelpers> is third party software, and is not endorsed by Twitter.
 
 [-Transformer / List]
 transformer = List
