--- a/weaver.ini
+++ b/weaver.ini
@@ -1,4 +1,6 @@
-; This file was auto-generated from iller.yaml on 2015-11-24 17:04:48 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 22:21:23 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0309
 
 [@CorePrep]
 
@@ -9,6 +11,9 @@
 [Badges]
 badge = perl
 badge = travis
+badge = kwalitee
+badge = cpantesters
+badge = coverage
 formats = html, markdown
 
 [Version]
@@ -35,16 +40,16 @@ command = func
 
 [Region / postlude]
 
-[Source::DefaultGitHub]
-text = L<%s>
+[GenerateSection / SOURCE]
+text = L<{{$repository_web}}>
 
-[Homepage::DefaultCPAN]
-text = L<%s>
+[GenerateSection / HOMEPAGE]
+text = L<{{$homepage}}>
 
 [Authors]
 
 [Legal::Supplemented]
-header = WHat
+header = LICENSE
 text_after = Bootstrap itself is (c) Twitter. See L<their license information|http://getbootstrap.com/getting-started/#license-faqs>.
 text_after =
 text_after = L<Mojolicious::Plugin::BootstrapHelpers> is third party software, and is not endorsed by Twitter.
