Travis should only test on 5.20+

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 22:13:26 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 22:34:12 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0309
 
@@ -129,7 +129,7 @@ release_branch = release
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.20 5.22
 
 [Git::Commit / CommitBeforeTag]
 allow_dirty_match = .
