--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 22:34:12 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-03-23 22:47:30 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0309
 
@@ -249,7 +249,7 @@ Dist::Iller = 0.1408
 Dist::Iller::Config::Author::CSSON = 0.0309
 
 [Prereqs / RuntimeRequires]
-List::MoreUtils = 0.408
+List::Util = 1.44
 Mojolicious = 5.0
 Scalar::Util = 1.29
 String::Random = 0
