Changes + generated files

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-12-31 16:31:44 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2018-12-31 17:15:47 UTC.
 ; The following configs were used:
-; * Dist::Iller::Config::Author::CSSON: 0.0313
+; * Dist::Iller::Config::Author::CSSON: 0.0322
 
 name = Mojolicious-Plugin-BootstrapHelpers
 author = Erik Carlsson <info@code301.com>
@@ -17,6 +17,7 @@ exclude_match = examples/.*\.html
 
 [PromptIfStale]
 check_all_plugins = 1
+phase = build
 
 [CopyFilesFromBuild]
 copy = META.json
@@ -92,6 +93,7 @@ directory = examples
 [Git::Contributors]
 
 [Test::Kwalitee::Extra]
+arg = !prereq_matches_use !build_prereq_matches_use
 
 [Test::NoTabs]
 
@@ -134,7 +136,7 @@ release_branch = release
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.20 5.22
+perl_version = 5.20 5.22 5.24
 
 [Git::Commit / CommitBeforeTag]
 allow_dirty_match = .
@@ -180,21 +182,21 @@ Badge::Depot::Plugin::Cpantesters = 0
 Badge::Depot::Plugin::Kwalitee = 0
 Badge::Depot::Plugin::Perl = 0
 Badge::Depot::Plugin::Travis = 0
-Dist::Zilla = 6.008
+Dist::Zilla = 6.012
 Dist::Zilla::Plugin::Authority = 1.009
-Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.007
+Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.008
 Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0200
 Dist::Zilla::Plugin::CheckChangesHasContent = 0.008
 Dist::Zilla::Plugin::Clean = 0.07
 Dist::Zilla::Plugin::ConfirmRelease = 0
-Dist::Zilla::Plugin::CopyFilesFromBuild = 0.163040
+Dist::Zilla::Plugin::CopyFilesFromBuild = 0.170880
 Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
 Dist::Zilla::Plugin::ExecDir = 0
-Dist::Zilla::Plugin::Git = 2.041
+Dist::Zilla::Plugin::Git = 2.045
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.014
 Dist::Zilla::Plugin::Git::Commit = 0
-Dist::Zilla::Plugin::Git::Contributors = 0.029
+Dist::Zilla::Plugin::Git::Contributors = 0.034
 Dist::Zilla::Plugin::Git::GatherDir = 0
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::Git::Tag = 0
@@ -207,13 +209,13 @@ Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaNoIndex = 0
-Dist::Zilla::Plugin::MetaProvides::Package = 2.003001
+Dist::Zilla::Plugin::MetaProvides::Package = 2.004003
 Dist::Zilla::Plugin::MetaYAML = 0
 Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 4.006
 Dist::Zilla::Plugin::Prereqs = 0
-Dist::Zilla::Plugin::PromptIfStale = 0
+Dist::Zilla::Plugin::PromptIfStale = 0.055
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.163250
 Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
@@ -222,12 +224,12 @@ Dist::Zilla::Plugin::RunExtraTests = 0.028
 Dist::Zilla::Plugin::ShareDir = 0
 Dist::Zilla::Plugin::Stenciller::HtmlExamples = 0.0201
 Dist::Zilla::Plugin::Stenciller::MojoliciousTests = 0.0200
-Dist::Zilla::Plugin::Test::Compile = 2.056
+Dist::Zilla::Plugin::Test::Compile = 2.057
 Dist::Zilla::Plugin::Test::EOF = 0.0501
 Dist::Zilla::Plugin::Test::EOL = 0.18
 Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 Dist::Zilla::Plugin::Test::NoTabs = 0.15
-Dist::Zilla::Plugin::Test::ReportPrereqs = 0.021
+Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 Dist::Zilla::Plugin::Test::Version = 1.05
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::TravisYML = 1.15
@@ -253,7 +255,7 @@ Test::Warnings = 0.026
 
 [Prereqs / DevelopSuggests]
 Dist::Iller = 0.1408
-Dist::Iller::Config::Author::CSSON = 0.0313
+Dist::Iller::Config::Author::CSSON = 0.0322
 
 [Prereqs / RuntimeRequires]
 List::Util = 1.44
@@ -274,21 +276,21 @@ Test::More = 0.96
 ; authordep Badge::Depot::Plugin::Kwalitee = 0
 ; authordep Badge::Depot::Plugin::Perl = 0
 ; authordep Badge::Depot::Plugin::Travis = 0
-; authordep Dist::Zilla = 6.008
+; authordep Dist::Zilla = 6.012
 ; authordep Dist::Zilla::Plugin::Authority = 1.009
-; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.007
+; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.008
 ; authordep Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0.0200
 ; authordep Dist::Zilla::Plugin::CheckChangesHasContent = 0.008
 ; authordep Dist::Zilla::Plugin::Clean = 0.07
 ; authordep Dist::Zilla::Plugin::ConfirmRelease = 0
-; authordep Dist::Zilla::Plugin::CopyFilesFromBuild = 0.163040
+; authordep Dist::Zilla::Plugin::CopyFilesFromBuild = 0.170880
 ; authordep Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
 ; authordep Dist::Zilla::Plugin::ExecDir = 0
-; authordep Dist::Zilla::Plugin::Git = 2.041
+; authordep Dist::Zilla::Plugin::Git = 2.045
 ; authordep Dist::Zilla::Plugin::Git::Check = 0
 ; authordep Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.014
 ; authordep Dist::Zilla::Plugin::Git::Commit = 0
-; authordep Dist::Zilla::Plugin::Git::Contributors = 0.029
+; authordep Dist::Zilla::Plugin::Git::Contributors = 0.034
 ; authordep Dist::Zilla::Plugin::Git::GatherDir = 0
 ; authordep Dist::Zilla::Plugin::Git::Push = 0
 ; authordep Dist::Zilla::Plugin::Git::Tag = 0
@@ -301,13 +303,13 @@ Test::More = 0.96
 ; authordep Dist::Zilla::Plugin::MetaConfig = 0
 ; authordep Dist::Zilla::Plugin::MetaJSON = 0
 ; authordep Dist::Zilla::Plugin::MetaNoIndex = 0
-; authordep Dist::Zilla::Plugin::MetaProvides::Package = 2.003001
+; authordep Dist::Zilla::Plugin::MetaProvides::Package = 2.004003
 ; authordep Dist::Zilla::Plugin::MetaYAML = 0
 ; authordep Dist::Zilla::Plugin::NextRelease::Grouped = 0.0200
 ; authordep Dist::Zilla::Plugin::PodSyntaxTests = 0
 ; authordep Dist::Zilla::Plugin::PodWeaver = 4.006
 ; authordep Dist::Zilla::Plugin::Prereqs = 0
-; authordep Dist::Zilla::Plugin::PromptIfStale = 0
+; authordep Dist::Zilla::Plugin::PromptIfStale = 0.055
 ; authordep Dist::Zilla::Plugin::Readme = 0
 ; authordep Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.163250
 ; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
@@ -316,12 +318,12 @@ Test::More = 0.96
 ; authordep Dist::Zilla::Plugin::ShareDir = 0
 ; authordep Dist::Zilla::Plugin::Stenciller::HtmlExamples = 0.0201
 ; authordep Dist::Zilla::Plugin::Stenciller::MojoliciousTests = 0.0200
-; authordep Dist::Zilla::Plugin::Test::Compile = 2.056
+; authordep Dist::Zilla::Plugin::Test::Compile = 2.057
 ; authordep Dist::Zilla::Plugin::Test::EOF = 0.0501
 ; authordep Dist::Zilla::Plugin::Test::EOL = 0.18
 ; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = v0.2.1
 ; authordep Dist::Zilla::Plugin::Test::NoTabs = 0.15
-; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.021
+; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0.027
 ; authordep Dist::Zilla::Plugin::Test::Version = 1.05
 ; authordep Dist::Zilla::Plugin::TestRelease = 0
 ; authordep Dist::Zilla::Plugin::TravisYML = 1.15
